--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hello World</title>
+  <link href='style.css' rel='stylesheet'>
 </head>
-<body>
-<h1> Hello, world! </h1>
 
+<body"> ​
+  
+  <div id="nav-bar">
+    <p> Navigation bar </p>
+    <p> Navigation bar </p>
+    <p> Navigation bar </p>
+    <p> Navigation bar </p>
+  </div>
+
+  <div class="card-group">
+    <div class="card feat-photo"> Test </div>
+    <div class="card">
+      <p> Test Test Test Test Test Test Test Test Test Test </p>
+    <div class="card"> <p> Hello, world! </p></div>
+  </div>
+  </div>
+
+  <div class="card-group">
+    <div class="card feat-photo"> Test </div>
+    <div class="card">
+      <p> Test Test Test Test Test Test Test Test Test Test </p>
+    <div class="card"> <p> Hello, world! </p></div>
+  </div>
+  </div>
+
+  <h1>Hello, world!</h1>
+
+  
 </body>
+
+
 </html>
