--- a/index.html
+++ b/index.html
@@ -7,31 +7,38 @@
   <link href='style.css' rel='stylesheet'>
 </head>
 
-<body"> ​
+<body> ​
   
-  <div id="nav-bar">
-    <p> Navigation bar </p>
-    <p> Navigation bar </p>
-    <p> Navigation bar </p>
-    <p> Navigation bar </p>
-  </div>
+  <nav>
+    <div class="nav-items">
+      <div><p>Logo</p></div>
+      <div><p>MartinPlaza</p></div>
+    </div>
+    <div class="nav-items">
+      <div><p>*Github*</p></div>
+      <div><p>*Facebook*</p></div>
+      <div><p>*Email*</p></div>
+    </div>
+  </nav>
 
-  <div class="card-group">
+  <!-- <div class="card-group">
     <div class="card feat-photo"> Test </div>
     <div class="card">
       <p> Test Test Test Test Test Test Test Test Test Test </p>
     <div class="card"> <p> Hello, world! </p></div>
   </div>
-  </div>
+  </div> -->
 
-  <div class="card-group">
-    <div class="card feat-photo"> Test </div>
-    <div class="card">
-      <p> Test Test Test Test Test Test Test Test Test Test </p>
-    <div class="card"> <p> Hello, world! </p></div>
-  </div>
-  </div>
-
+  <h1>Hello, world!</h1>
+  <h1>Hello, world!</h1>
+  <h1>Hello, world!</h1>
+  <h1>Hello, world!</h1>
+  <h1>Hello, world!</h1>
+  <h1>Hello, world!</h1>
+  <h1>Hello, world!</h1>
+  <h1>Hello, world!</h1>
+  <h1>Hello, world!</h1>
+  <h1>Hello, world!</h1>
   <h1>Hello, world!</h1>
 
   
