ui: finished navigation bar feat: added links to email and github

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"  />
+  <meta name="theme-color" content="#bfe5f5" />
+  <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
   <title>Hello World</title>
   <link href='style.css' rel='stylesheet'>
 </head>
@@ -11,13 +13,12 @@
   
   <nav>
     <div class="nav-items">
-      <div><p>Logo</p></div>
-      <div><p>MartinPlaza</p></div>
+      <div> <img class="nav-icon" src="assets/logo2.svg" alt="Website Logo"> </div>
+      <div> <img class="nav-icon" src="assets/name-mark.svg" alt="Mail Logo"> </div>
     </div>
-    <div class="nav-items">
-      <div><p>*Github*</p></div>
-      <div><p>*Facebook*</p></div>
-      <div><p>*Email*</p></div>
+    <div class="nav-items links">
+      <div> <a href="https://github.com/martinrplaza"> <img class="nav-icon" src="assets/github.svg"  alt="GitHub Logo"> </a> </div>
+      <div> <a href="mailto:mrplaza2@up.edu.ph"> <img class="nav-icon" src="assets/email.svg" alt="Mail Logo"> </a> </div>
     </div>
   </nav>
 
