--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"  />
-  <meta name="theme-color" content="#bfe5f5" />
+  <meta name="theme-color" content="#bfe5f5">
+  <!-- <meta name="theme-color" content="#bfe5f5" media="(prefers-color-scheme: light)"> -->
+  <!-- <meta name="theme-color" content="#1e96ca" media="(prefers-color-scheme: dark)"> -->
   <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
   <title>Hello World</title>
   <link href='style.css' rel='stylesheet'>
@@ -22,25 +24,54 @@
     </div>
   </nav>
 
-  <!-- <div class="card-group">
-    <div class="card feat-photo"> Test </div>
+  <div class="card-group">
+    <img class="card feat-photo" src="assets/feat-photo.jpg"  alt="GitHub Logo">
     <div class="card">
-      <p> Test Test Test Test Test Test Test Test Test Test </p>
-    <div class="card"> <p> Hello, world! </p></div>
+      <h1>Hey there! I'm Adrian, a computer science grad. Check out my portfolio! 👋</h1>
+      <div class="card"><p>My name is Martin Adrian Rosero Plaza, and I recently earned my Bachelor's degree in Computer Science from University of the Philippines Los Baños. Growing up in Naga City, I developed a passion for technology and problem-solving, which led me to pursue a career in this field.</p></div>
+    </div>
   </div>
-  </div> -->
 
-  <h1>Hello, world!</h1>
-  <h1>Hello, world!</h1>
-  <h1>Hello, world!</h1>
-  <h1>Hello, world!</h1>
-  <h1>Hello, world!</h1>
-  <h1>Hello, world!</h1>
-  <h1>Hello, world!</h1>
-  <h1>Hello, world!</h1>
-  <h1>Hello, world!</h1>
-  <h1>Hello, world!</h1>
-  <h1>Hello, world!</h1>
+  <div class="card-group">
+    <div class="card">
+      <h1>Skills</h1>
+    </div>
+    <div class="card">
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+    </div>
+  </div>
+
+  <div class="card-group">
+    <div class="card">
+      <h1>Projects</h1>
+    </div>
+  </div>
+
+  <div class="card-group">
+
+    <div class="card">
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>   
+    </div>
+    <div class="card">
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+    </div>
+    <div class="card">
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
+    </div>
+  </div>
+
 
   
 </body>
