ui: added skills and projects section

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <div> <img class="nav-icon" src="assets/name-mark.svg" alt="Mail Logo"> </div>
     </div>
     <div class="nav-items links">
-      <div> <a href="https://github.com/martinrplaza"> <img class="nav-icon" src="assets/github.svg"  alt="GitHub Logo"> </a> </div>
-      <div> <a href="mailto:mrplaza2@up.edu.ph"> <img class="nav-icon" src="assets/email.svg" alt="Mail Logo"> </a> </div>
+       <a href="https://github.com/martinrplaza"> <img class="nav-icon" src="assets/github.svg"  alt="GitHub Logo"> </a>
+      <a href="mailto:mrplaza2@up.edu.ph"> <img class="nav-icon" src="assets/email.svg" alt="Mail Logo"> </a>
     </div>
   </nav>
 
   <div class="card-group">
-    <img class="card feat-photo" src="assets/feat-photo.jpg"  alt="GitHub Logo">
+    <img class="card feat-photo" src="assets/feat-photo.jpg"  alt="hala!">
     <div class="card">
       <h1>Hey there! I'm Adrian, a computer science grad. Check out my portfolio! 👋</h1>
-      <div class="card"><p>My name is Martin Adrian Rosero Plaza, and I recently earned my Bachelor's degree in Computer Science from University of the Philippines Los Baños. Growing up in Naga City, I developed a passion for technology and problem-solving, which led me to pursue a career in this field.</p></div>
+      <div class="card"><p>My name is Martin Adrian Rosero Plaza, and I recently earned my Bachelor's degree in Computer Science from University of the Philippines Los Baños. Growing up in Naga City, I developed a passion for technology and problem-solving, which led me to pursue a career in this field. I am proficient in various programming languages and technologies. I have a strong foundation in data structures and algorithms. I am eager to learn new technologies and apply my skills to solve real-world problems. </p></div>
     </div>
   </div>
 
@@ -37,44 +37,72 @@
       <h1>Skills</h1>
     </div>
     <div class="card">
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
+      <ul>
+        <li>Programming Languages: Java, Python, C++, JavaScript</li>
+        <li>Data Structures and Algorithms</li>
+        <li>Databases: MySQL, PostgreSQL</li>
+        <li>Web Development: HTML, CSS, JavaScript</li>
+        <li>Operating Systems: Windows, Linux</li>
+      </ul>
+    </div>
+    <div class="card">
+      <div class="nav-items links">
+        <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer"> 
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/> 
+        </a> 
+        <a href="https://www.w3.org/html/" target="_blank" rel="noreferrer"> 
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/> 
+        </a> <a href="https://www.java.com" target="_blank" rel="noreferrer"> 
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original.svg" alt="java" width="40" height="40"/> 
+        </a> 
+        <a href="https://www.python.org" target="_blank" rel="noreferrer"> 
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" width="40" height="40"/> 
+        </a>
+        <a><img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/> 
+        </a> 
+        <a href="https://www.linux.org/" target="_blank" rel="noreferrer"> 
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/> 
+        </a> 
+        <a href="https://www.figma.com/" target="_blank" rel="noreferrer"> 
+          <img src="https://www.vectorlogo.zone/logos/figma/figma-icon.svg" alt="figma" width="40" height="40"/> 
+        </a> 
+      </div>
     </div>
   </div>
 
-  <div class="card-group">
+  <div class="card-group card-title">
     <div class="card">
       <h1>Projects</h1>
     </div>
   </div>
 
+  <div class="card-group card-title">
+    <img class="card feat-photo" src="assets/foodlocate.png"  alt="foodLocate artwork">
+  </div>
+  
   <div class="card-group">
-
     <div class="card">
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>   
+      <h1>foodLocate</h1>
+      <ul>
+        <li> Alvarez, Monique </li>
+        <li> Ong, Joseffe </li> 
+        <li> Plaza, Adrian </li>
+      </ul>
+    </div>
+    <img class="card feat-photo" src="assets/foodlocate-sc.png"  alt="foodLocate screen capture">
+    <div class="card">
+      <p>foodLocate is a web application built using Python and Flask that allows users to manage and review food items and establishments. This project is developed as part of the CMSC 127 course at the University of the Philippines Los Baños for the 2nd Semester AY 2023-2024.</p>
     </div>
     <div class="card">
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
-    </div>
-    <div class="card">
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
-      <h1>Hello, world!</h1>
+      <ul>
+        <li> Backend: Python, Flask </li>
+        <li> Database: MariaDB </li> 
+        <li> Frontend: HTML, CSS, Bootstrap JavaScript </li>
+      </ul>
     </div>
   </div>
 
 
-  
 </body>
-
 
 </html>
