feat: added readme

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"  />
   <meta name="theme-color" content="#bfe5f5">
-  <!-- <meta name="theme-color" content="#bfe5f5" media="(prefers-color-scheme: light)"> -->
-  <!-- <meta name="theme-color" content="#1e96ca" media="(prefers-color-scheme: dark)"> -->
   <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
-  <title>Hello World</title>
+  <title>Martin Plaza</title>
+  <link rel="icon" href="assets/logo2.svg">
   <link href='style.css' rel='stylesheet'>
 </head>
 
